# telespider

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
telespider/: __init__.py  __main__.py  app.py  config.py  console.py
telespider/scrapper/: __init__.py  channel.py  scrapper.py  types.py  utils.py
